force-app/main/default/objects/QA_Test_Plan__c/QA_Test_Plan__c.object-meta.xml
<CustomObject>
    <description>Test Plan object which gives information about the User Story,Test Execution and Test Case which spread across different Sprints</description>
    <label>Test Plan</label>
    <nameField>
        <label>Test Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>