force-app/main/default/objects/QA_Test_Plan__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Brief Description about Test Plan</description>
    <inlineHelpText>Please enter the Brief Description of the Test Plan.</inlineHelpText>
    <label>Brief Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>