force-app/main/default/objects/QA_Test_Plan__c/fields/Functional_Specification__c.field-meta.xml
<CustomField>
    <fullName>Functional_Specification__c</fullName>
    <description>Url to the functional specification, if one exists</description>
    <inlineHelpText>Url to the functional specification, if one exists</inlineHelpText>
    <label>Functional Specification</label>
    <type>Url</type>
</CustomField>