force-app/main/default/objects/QA_Test_Plan__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Scope of the TestPlan</description>
    <inlineHelpText>Please enter the Scope of the Test Plan</inlineHelpText>
    <label>Scope</label>
    <type>TextArea</type>
</CustomField>