force-app/main/default/objects/QA_Test_Plan__c/fields/Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>Scrum_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mention the scrum team for the Test Plan</description>
    <inlineHelpText>Please mention the Scrum Team.</inlineHelpText>
    <label>Scrum Team</label>
    <referenceTo>ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Test Plans</relationshipLabel>
    <relationshipName>R00ND0000001rflaMAA</relationshipName>
    <type>Lookup</type>
</CustomField>