force-app/main/default/objects/QA_Test_Plan__c/fields/Test_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Test_Strategy__c</fullName>
    <inlineHelpText>Your test strategy should at a minimum cover what you will be testing, what you won&#39;t be testing, and what you understand the major risk areas to be.</inlineHelpText>
    <label>Test Strategy</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>